JSON file. List of examples. New functionality. New statistics